syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "RelicAffix.proto";

message BattleRelic {
	uint32 id = 1;
	uint32 level = 2;
	uint32 main_affix_id = 3;
	repeated RelicAffix sub_affix_list = 4;
	uint32 unique_id = 5;
	uint32 set_id = 6;
	uint32 type = 7;
	uint32 rarity = 8;
}

