syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message GetChallengeRecommendLineupListCsReq {
	uint32 challenge_id = 10;
}

